--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -881,7 +881,7 @@
                 // "--max_samples", "200",
                 "-e",   "200",
                 "-b", "16",
-                "-lr", "1e-4", 
+                "-lr", "1e-3", 
                 "--model", "POMELO_module",  
                 // "-l", "log_l1_loss", "L1reg", 
                 "-l", "log_l1_loss",
@@ -890,7 +890,7 @@
                 "-dw","2",
                 "-S2",
                 "-NIR",
-                "-S1",
+                // "-S1",
                 "-f",
                 // "16",
                 "8",
@@ -923,7 +923,7 @@
                 "--occupancymodel",
                 // "--buildinginput",
                 // "--segmentationinput",
-                "--useposembedding",
+                // "--useposembedding",
                 "--weightdecay_pos", "0.0",
                 "--sentinelbuildings",
                 "-r77",
