--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -430,6 +430,13 @@
             "console": "integratedTerminal",
         },
         {
+            "name": "eval_dda_adj_maps.py",
+            "type": "python",
+            "request": "launch",
+            "module": "baselines.eval_dda_adj_maps",
+            "console": "integratedTerminal",
+        },
+        {
             "name": "train, smp, DANN",
             "type": "python",
             "request": "launch",
@@ -768,7 +775,7 @@
                 // "rwa", 
                 "-tregtrain", "uga", "rwa",
                 "-exZH",
-                "--val", "1",
+                "-val", "1",
                 "--lr_step", "5",
                 // "--lr_gamma", "0.5",
                 "--lr_gamma", "0.75",
@@ -810,7 +817,7 @@
                 "-o",
                 "-s",
                 // "--max_samples", "200",
-                "-e",   "200",
+                "-e",   "150",
                 "-b", "16",
                 // "-lr", "2.5e-6", 
                 // "-lr", "1e-5", 
@@ -835,7 +842,7 @@
                 //"-treg", "pricp2",
                 "-tregtrain", "rwa",
                 "-exZH",
-                "--val", "1",
+                "-val", "1",
                 "--lr_step", "5",
                 // "--lr_gamma", "0.5",
                 "--lr_gamma", "0.75",
@@ -879,18 +886,20 @@
                 "-o",
                 "-s",
                 // "--max_samples", "200",
-                "-e",   "200",
+                "-e",   "150",
                 "-b", "16",
                 "-lr", "1e-3", 
-                "--model", "POMELO_module",  
+                "--model", "POMELO_module", 
+                // "--feature_extractor", "DDA", 
                 // "-l", "log_l1_loss", "L1reg", 
                 "-l", "log_l1_loss",
-                // "-la", "1.0", "0.01",
+                // "-la", "1.0", "1.0",
                 "-la", "1.0",
-                "-dw","2",
+                // "--lam_raw", "0.1",
+                "-dw","1",
                 "-S2",
                 "-NIR",
-                // "-S1",
+                "-S1",
                 "-f",
                 // "16",
                 "8",
@@ -900,10 +909,10 @@
                 //"-treg", "pricp2",
                 "-tregtrain", "rwa",
                 "-exZH",
-                "--val", "1",
+                "-val", "1",
                 "--lr_step", "5",
-                // "--lr_gamma", "0.5",
-                "--lr_gamma", "0.75",
+                "--lr_gamma", "0.5",
+                // "--lr_gamma", "0.75",
                 "--full_aug",
                 "--num_workers", "6", 
                 "--seed", "1612",
@@ -923,7 +932,7 @@
                 "--occupancymodel",
                 // "--buildinginput",
                 // "--segmentationinput",
-                // "--useposembedding",
+                "--useposembedding",
                 "--weightdecay_pos", "0.0",
                 "--sentinelbuildings",
                 "-r77",
@@ -933,6 +942,135 @@
         },
         {
             "name": "train, Stage 2, rwa",
+            "type": "python",
+            "request": "launch",
+            "program": "run_train.py",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "args": [
+                "-o",
+                "-s",
+                // "--max_samples", "200",
+                "-e",   "150",
+                "-b", "16",
+                "-lr", "1e-3", 
+                "--model", "POMELO_module",  
+                // "-l", "log_l1_loss", "L1reg", 
+                "-l", "log_l1_loss",
+                // "-la", "1.0", "0.01",
+                "-la", "1.0",
+                "-dw","1",
+                "-S2",
+                "-NIR",
+                "-S1",
+                "-f",
+                // "16",
+                "8",
+                // "--dilation", "2",
+                "-rse",
+                "-treg", "rwa",
+                //"-treg", "pricp2",
+                "-tregtrain", "rwa",
+                "-exZH",
+                "-val", "1",
+                "--lr_step", "5",
+                "--lr_gamma", "0.5",
+                // "--lr_gamma", "0.75",
+                "--full_aug",
+                "--num_workers", "6", 
+                "--seed", "1612",
+                "-gc", "0.01",
+                // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1110_933/last_model.pth",
+                // "--parent", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1522_224/",
+                "--parent", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1526_321",
+                "--supmode", "weaksup",
+                "--lam_weak", "100",
+                // "--supmode", "unsup",
+                "--nomain",
+                // "--weak_merge_aug",
+                // "--max_weak_samples", "2",
+                "--val_every_n_epochs", "1",
+                // "--test_every_i_steps", "50",
+                // "--val_every_n_epochs", "100",
+                // "--weak_batch_size", "4",
+                "--weak_batch_size", "1",
+                "--occupancymodel",
+                // "--buildinginput",
+                // "--segmentationinput",
+                "--weightdecay_pos", "0.0",
+                "--useposembedding",
+                "--sentinelbuildings",
+                "-r77",
+                "--pretrained",
+                "--gradientaccumulation",
+            ]
+        },
+        {
+            "name": "train, Stage 3, rwa",
+            "type": "python",
+            "request": "launch",
+            "program": "run_train.py",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "args": [
+                "-o",
+                "-s",
+                // "--max_samples", "200",
+                "-e",   "150",
+                "-b", "16",
+                "-lr", "1e-3", 
+                "--model", "POMELO_module",  
+                // "-l", "log_l1_loss", "L1reg", 
+                "-l", "log_l1_loss",
+                // "-la", "1.0", "0.01",
+                "-la", "1.0",
+                "-dw","1",
+                "-S2",
+                "-NIR",
+                "-S1",
+                "-f",
+                // "16",
+                "8",
+                // "--dilation", "2",
+                "-rse",
+                "-treg", "rwa",
+                //"-treg", "pricp2",
+                "-tregtrain", "rwa",
+                "-exZH",
+                "-val", "1",
+                "--lr_step", "5",
+                "--lr_gamma", "0.5",
+                // "--lr_gamma", "0.75",
+                "--full_aug",
+                "--num_workers", "6", 
+                "--seed", "1612",
+                "-gc", "0.01",
+                // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1110_933/last_model.pth",
+                "--parent", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1523_457/",
+                "--supmode", "weaksup",
+                "--lam_weak", "100",
+                // "--supmode", "unsup",
+                "--nomain",
+                // "--weak_merge_aug",
+                // "--max_weak_samples", "2",
+                "--val_every_n_epochs", "1",
+                // "--test_every_i_steps", "50",
+                // "--val_every_n_epochs", "100",
+                // "--weak_batch_size", "4",
+                "--weak_batch_size", "1",
+                "--occupancymodel",
+                // "--buildinginput",
+                // "--segmentationinput",
+                "--useposembedding",
+                "--sentinelbuildings",
+                "--weightdecay_pos", "0.0",
+                "-r77",
+                "--pretrained",
+                "--gradientaccumulation",
+            ]
+        },
+        {
+            "name": "train, Stage 1, pri",
             "type": "python",
             "request": "launch",
             "program": "run_train.py",
@@ -952,18 +1090,18 @@
                 "-la", "1.0",
                 "-dw","2",
                 "-S2",
-                "-S1",
                 "-NIR",
+                "-S1",
                 "-f",
                 // "16",
                 "8",
                 // "--dilation", "2",
                 "-rse",
-                "-treg", "rwa",
+                "-treg", "pricp2",
                 //"-treg", "pricp2",
-                "-tregtrain", "rwa",
+                "-tregtrain", "pricp2",
                 "-exZH",
-                "--val", "1",
+                "-val", "1",
                 "--lr_step", "5",
                 // "--lr_gamma", "0.5",
                 "--lr_gamma", "0.75",
@@ -972,7 +1110,6 @@
                 "--seed", "1612",
                 "-gc", "0.01",
                 // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1110_933/last_model.pth",
-                "--parent", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1398_765/",
                 "--supmode", "weaksup",
                 "--lam_weak", "100",
                 // "--supmode", "unsup",
@@ -983,14 +1120,22 @@
                 // "--test_every_i_steps", "50",
                 // "--val_every_n_epochs", "100",
                 // "--weak_batch_size", "4",
-                "--weak_batch_size", "1",
+                "--weak_batch_size", "16",
                 "--occupancymodel",
                 "--buildinginput",
-                // "--segmentationinput",
+                "--segmentationinput",
+                // "--useposembedding",
+                "--weightdecay_pos", "0.0",
                 "--sentinelbuildings",
                 "-r77",
                 "--pretrained",
                 "--gradientaccumulation",
+                "--train_level", "fine",
+                "--weak_validation",
+                // "--val_every_i_steps", "5000",
+                "--val_every_i_steps", "1200",
+                "--test_every_i_steps", "6000",
+                "--max_weak_pix", "1000000"
             ]
         },
         {
@@ -1055,8 +1200,9 @@
                 "--pretrained",
                 // "--gradientaccumulation",
                 // "--train_level", "fineTRACTCE",
-                "--train_level", "fine"
+                "--train_level", "fine",
                 // "--optimizer", "SGD",
+                "--weightdecay_pos", "0.0",
                 // "--weightdecay", "0.000001",
                 // "--eu2rwa" 
             ]
