--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -437,6 +437,13 @@
             "console": "integratedTerminal",
         },
         {
+            "name": "eval_ours_adj.py",
+            "type": "python",
+            "request": "launch",
+            "module": "baselines.eval_ours_adj",
+            "console": "integratedTerminal",
+        },
+        {
             "name": "train, smp, DANN",
             "type": "python",
             "request": "launch",
@@ -930,11 +937,77 @@
                 // "--weak_batch_size", "4",
                 "--weak_batch_size", "1",
                 "--occupancymodel",
-                // "--buildinginput",
+                "--buildinginput",
                 // "--segmentationinput",
                 "--useposembedding",
                 "--weightdecay_pos", "0.0",
                 "--sentinelbuildings",
+                "-r77",
+                "--pretrained",
+                "--gradientaccumulation",
+            ]
+        },
+        {
+            "name": "train, Stage 1, rwa, Gbuildings",
+            "type": "python",
+            "request": "launch",
+            "program": "run_train.py",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "args": [
+                "-o",
+                "-s",
+                // "--max_samples", "200",
+                "-e",   "150",
+                "-b", "16",
+                "-lr", "1e-3", 
+                "--model", "POMELO_module", 
+                // "--feature_extractor", "DDA", 
+                // "-l", "log_l1_loss", "L1reg", 
+                "-l", "log_l1_loss",
+                // "-la", "1.0", "1.0",
+                "-la", "1.0",
+                // "--lam_raw", "0.1",
+                "-dw","1",
+                "-S2",
+                "-NIR",
+                "-S1",
+                "-f",
+                // "16",
+                "8",
+                // "--dilation", "2",
+                "-rse",
+                "-treg", "rwa",
+                //"-treg", "pricp2",
+                "-tregtrain", "rwa",
+                "-exZH",
+                "-val", "1",
+                "--lr_step", "5",
+                "--lr_gamma", "0.5",
+                // "--lr_gamma", "0.75",
+                "--full_aug",
+                "--num_workers", "6", 
+                "--seed", "1612",
+                "-gc", "0.001",
+                // "-gc", "0.01",
+                // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1110_933/last_model.pth",
+                "--supmode", "weaksup",
+                "--lam_weak", "100",
+                // "--supmode", "unsup",
+                "--nomain",
+                // "--weak_merge_aug",
+                // "--max_weak_samples", "2",
+                "--val_every_n_epochs", "1",
+                // "--test_every_i_steps", "50",
+                // "--val_every_n_epochs", "100",
+                // "--weak_batch_size", "4",
+                "--weak_batch_size", "1",
+                "--occupancymodel",
+                // "--buildinginput",
+                // "--segmentationinput",
+                "--useposembedding",
+                "--weightdecay_pos", "0.0",
+                // "--sentinelbuildings",
                 "-r77",
                 "--pretrained",
                 "--gradientaccumulation",
@@ -1046,7 +1119,7 @@
                 "--seed", "1612",
                 "-gc", "0.01",
                 // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1110_933/last_model.pth",
-                "--parent", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1523_457/",
+                "--parent", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1526_321/",
                 "--supmode", "weaksup",
                 "--lam_weak", "100",
                 // "--supmode", "unsup",
@@ -1088,7 +1161,7 @@
                 "-l", "log_l1_loss",
                 // "-la", "1.0", "0.01",
                 "-la", "1.0",
-                "-dw","2",
+                "-dw","1",
                 "-S2",
                 "-NIR",
                 "-S1",
@@ -1122,17 +1195,18 @@
                 // "--weak_batch_size", "4",
                 "--weak_batch_size", "16",
                 "--occupancymodel",
-                "--buildinginput",
-                "--segmentationinput",
+                // "--buildinginput",
+                // "--segmentationinput",
                 // "--useposembedding",
                 "--weightdecay_pos", "0.0",
+                // "--val_every_i_steps", "5000",
                 "--sentinelbuildings",
                 "-r77",
                 "--pretrained",
-                "--gradientaccumulation",
+                // "--gradientaccumulation",
                 "--train_level", "fine",
                 "--weak_validation",
-                // "--val_every_i_steps", "5000",
+                "--useposembedding",
                 "--val_every_i_steps", "1200",
                 "--test_every_i_steps", "6000",
                 "--max_weak_pix", "1000000"
