--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -938,7 +938,7 @@
                 "--weak_batch_size", "1",
                 "--occupancymodel",
                 "--buildinginput",
-                // "--segmentationinput",
+                "--segmentationinput",
                 "--useposembedding",
                 "--weightdecay_pos", "0.0",
                 "--sentinelbuildings",
@@ -960,15 +960,15 @@
                 // "--max_samples", "200",
                 "-e",   "150",
                 "-b", "16",
-                "-lr", "1e-3", 
+                "-lr", "1e-5", 
                 "--model", "POMELO_module", 
                 // "--feature_extractor", "DDA", 
-                // "-l", "log_l1_loss", "L1reg", 
-                "-l", "log_l1_loss",
-                // "-la", "1.0", "1.0",
-                "-la", "1.0",
+                "-l", "log_l1_loss", "L1reg", 
+                // "-l", "log_l1_loss",
+                "-la", "1.0", "10.0",
+                // "-la", "1.0",
                 // "--lam_raw", "0.1",
-                "-dw","1",
+                "-dw","4",
                 "-S2",
                 "-NIR",
                 "-S1",
@@ -995,13 +995,13 @@
                 "--lam_weak", "100",
                 // "--supmode", "unsup",
                 "--nomain",
-                // "--weak_merge_aug",
+                "--weak_merge_aug",
                 // "--max_weak_samples", "2",
                 "--val_every_n_epochs", "1",
                 // "--test_every_i_steps", "50",
                 // "--val_every_n_epochs", "100",
                 // "--weak_batch_size", "4",
-                "--weak_batch_size", "1",
+                "--weak_batch_size", "2",
                 "--occupancymodel",
                 // "--buildinginput",
                 // "--segmentationinput",
@@ -1010,7 +1010,7 @@
                 // "--sentinelbuildings",
                 "-r77",
                 "--pretrained",
-                "--gradientaccumulation",
+                // "--gradientaccumulation",
             ]
         },
         {
