--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -897,11 +897,14 @@
                 "-b", "16",
                 "-lr", "1e-3", 
                 "--model", "POMELO_module", 
+                "--head", "v3",
+                // "--feature_extractor", "vgg16",
                 // "--feature_extractor", "DDA", 
                 // "-l", "log_l1_loss", "L1reg", 
                 "-l", "log_l1_loss",
                 // "-la", "1.0", "1.0",
                 "-la", "1.0",
+                "--scale_regularization", "10.0",
                 // "--lam_raw", "0.1",
                 "-dw","1",
                 "-S2",
@@ -924,7 +927,7 @@
                 "--num_workers", "6", 
                 "--seed", "1612",
                 "-gc", "0.01",
-                // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1110_933/last_model.pth",
+                // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1555_154/last_model.pth",
                 "--supmode", "weaksup",
                 "--lam_weak", "100",
                 // "--supmode", "unsup",
@@ -938,7 +941,7 @@
                 "--weak_batch_size", "1",
                 "--occupancymodel",
                 "--buildinginput",
-                "--segmentationinput",
+                // "--segmentationinput",
                 "--useposembedding",
                 "--weightdecay_pos", "0.0",
                 "--sentinelbuildings",
@@ -968,6 +971,7 @@
                 "-la", "1.0", "10.0",
                 // "-la", "1.0",
                 // "--lam_raw", "0.1",
+                "--scale_regularization", "1.0",
                 "-dw","4",
                 "-S2",
                 "-NIR",
@@ -1003,8 +1007,8 @@
                 // "--weak_batch_size", "4",
                 "--weak_batch_size", "2",
                 "--occupancymodel",
-                // "--buildinginput",
-                // "--segmentationinput",
+                "--buildinginput",
+                "--segmentationinput",
                 "--useposembedding",
                 "--weightdecay_pos", "0.0",
                 // "--sentinelbuildings",
