--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -893,7 +893,7 @@
                 "-o",
                 "-s",
                 // "--max_samples", "200",
-                "-e",   "150",
+                "-e",   "100",
                 "-b", "16",
                 "-lr", "1e-3", 
                 "--model", "POMELO_module", 
@@ -961,10 +961,11 @@
                 "-o",
                 "-s",
                 // "--max_samples", "200",
-                "-e",   "150",
+                "-e",   "100",
                 "-b", "16",
                 "-lr", "1e-5", 
                 "--model", "POMELO_module", 
+                // "--head", "v3",
                 // "--feature_extractor", "DDA", 
                 "-l", "log_l1_loss", "L1reg", 
                 // "-l", "log_l1_loss",
@@ -1008,7 +1009,7 @@
                 "--weak_batch_size", "2",
                 "--occupancymodel",
                 "--buildinginput",
-                "--segmentationinput",
+                // "--segmentationinput",
                 "--useposembedding",
                 "--weightdecay_pos", "0.0",
                 // "--sentinelbuildings",
@@ -1028,12 +1029,14 @@
                 "-o",
                 "-s",
                 // "--max_samples", "200",
-                "-e",   "150",
+                "-e",   "100",
                 "-b", "16",
                 "-lr", "1e-3", 
                 "--model", "POMELO_module",  
+                "--head", "v2",
                 // "-l", "log_l1_loss", "L1reg", 
                 "-l", "log_l1_loss",
+                "--scale_regularization", "10.0",
                 // "-la", "1.0", "0.01",
                 "-la", "1.0",
                 "-dw","1",
@@ -1059,7 +1062,7 @@
                 "-gc", "0.01",
                 // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1110_933/last_model.pth",
                 // "--parent", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1522_224/",
-                "--parent", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1526_321",
+                "--parent", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1561_87",
                 "--supmode", "weaksup",
                 "--lam_weak", "100",
                 // "--supmode", "unsup",
@@ -1072,7 +1075,7 @@
                 // "--weak_batch_size", "4",
                 "--weak_batch_size", "1",
                 "--occupancymodel",
-                // "--buildinginput",
+                "--buildinginput",
                 // "--segmentationinput",
                 "--weightdecay_pos", "0.0",
                 "--useposembedding",
