upload bug fix with scale regularization

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -934,14 +934,14 @@
                 "-b", "16",
                 "-lr", "1e-3", 
                 "--model", "POMELO_module", 
-                "--head", "v2",
+                "--head", "v3",
                 // "--feature_extractor", "vgg16",
                 // "--feature_extractor", "DDA", 
                 // "-l", "log_l1_loss", "L1reg", 
                 "-l", "log_l1_loss",
                 // "-la", "1.0", "1.0",
                 "-la", "1.0",
-                // "--scale_regularization", "10.0",
+                "--scale_regularization", "10.0",
                 // "--lam_raw", "0.1",
                 "-dw","1", 
                 "-S2",
