prepare last steps for cross country training

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -910,7 +910,7 @@
                 "--occupancymodel",
                 "--buildinginput",
                 "--sentinelbuildings",
-                "-r77",
+                // "-r77",
                 "--pretrained",
                 "--gradientaccumulation",
                 // "--weightdecay", "0.001"
@@ -941,7 +941,7 @@
                 "-l", "log_l1_loss",
                 // "-la", "1.0", "1.0",
                 "-la", "1.0",
-                "--scale_regularization", "1.0",
+                "--scale_regularization", "0.0",
                 // "--lam_raw", "0.1",
                 "-dw","1", 
                 "-S2",
@@ -958,8 +958,8 @@
                 "-exZH",
                 "-val", "1",
                 "--lr_step", "5",
+                // "--lr_gamma", "0.825",
                 "--lr_gamma", "0.75",
-                // "--lr_gamma", "0.75",
                 "--full_aug",
                 // "--ascAug",
                 "--num_workers", "6", 
@@ -983,7 +983,77 @@
                 "--useposembedding",
                 "--weightdecay_pos", "0.0",
                 "--sentinelbuildings",
-                "-r77",
+                // "-r77",
+                "--pretrained",
+                "--gradientaccumulation",
+            ]
+        },
+        {
+            "name": "train, Stage 1, uga->rwa",
+            "type": "python",
+            "request": "launch",
+            "program": "run_train.py",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "args": [
+                "-o",
+                "-s",
+                // "--max_samples", "200",
+                "-e",   "100",
+                "-b", "16",
+                "-lr", "1e-3", 
+                "--model", "POMELO_module", 
+                "--head", "v3",
+                // "--feature_extractor", "vgg16",
+                // "--feature_extractor", "DDA", 
+                // "-l", "log_l1_loss", "L1reg", 
+                "-l", "log_l1_loss",
+                // "-la", "1.0", "1.0",
+                "-la", "1.0",
+                "--scale_regularization", "0.0",
+                // "--lam_raw", "0.1",
+                "-dw","1", 
+                "-S2",
+                "-NIR",
+                "-S1",
+                "-f",
+                // "16",
+                "8",
+                // "--dilation", "2",
+                "-rse",
+                "-treg", "rwa",
+                //"-treg", "pricp2",
+                "-tregtrain", "uga",
+                "--weak_validation",
+                "-exZH",
+                "-val", "1",
+                "--lr_step", "5",
+                // "--lr_gamma", "0.825",
+                "--lr_gamma", "0.75",
+                "--full_aug",
+                // "--ascAug",
+                "--num_workers", "6", 
+                "--seed", "1612",
+                "-gc", "0.01",
+                // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1577_622/last_model.pth",
+                "--supmode", "weaksup",
+                "--lam_weak", "100",
+                // "--supmode", "unsup",
+                "--nomain",
+                // "--weak_merge_aug",
+                // "--max_weak_samples", "2",
+                "--val_every_n_epochs", "1",
+                // "--test_every_i_steps", "50",
+                // "--val_every_n_epochs", "100",
+                // "--weak_batch_size", "4",
+                "--weak_batch_size", "1",
+                "--occupancymodel",
+                "--buildinginput",
+                // "--segmentationinput",
+                // "--useposembedding",
+                "--weightdecay_pos", "0.0",
+                "--sentinelbuildings",
+                // "-r77",
                 "--pretrained",
                 "--gradientaccumulation",
             ]
@@ -1006,12 +1076,12 @@
                 "--head", "v2",
                 // "--head", "v3",
                 // "--feature_extractor", "DDA", 
-                "-l", "log_l1_loss", "L1reg", 
+                "-l", "log_l1_loss",
                 // "-l", "log_l1_loss",
-                "-la", "1.0", "10.0",
+                "-la", "1.0",
                 // "-la", "1.0",
                 // "--lam_raw", "0.1",
-                "--scale_regularization", "10.0",
+                "--scale_regularization", "0.01",
                 "-dw","4",
                 "-S2",
                 "-NIR",
@@ -1027,8 +1097,8 @@
                 "-exZH",
                 "-val", "1",
                 "--lr_step", "5",
-                "--lr_gamma", "0.5",
-                // "--lr_gamma", "0.75",
+                // "--lr_gamma", "0.5",
+                "--lr_gamma", "0.75",
                 "--full_aug",
                 "--num_workers", "6", 
                 "--seed", "1612",
@@ -1052,7 +1122,7 @@
                 "--useposembedding",
                 "--weightdecay_pos", "0.0",
                 // "--sentinelbuildings",
-                "-r77",
+                // "-r77",
                 "--pretrained",
                 // "--gradientaccumulation",
             ]
@@ -1075,7 +1145,7 @@
                 "--head", "v3",
                 // "-l", "log_l1_loss", "L1reg", 
                 "-l", "log_l1_loss",
-                "--scale_regularization", "10.0",
+                "--scale_regularization", "0.0",
                 // "-la", "1.0", "0.01",
                 "-la", "1.0",
                 "-dw","1",
@@ -1093,7 +1163,7 @@
                 "-exZH",
                 "-val", "1",
                 "--lr_step", "5",
-                "--lr_gamma", "0.5",
+                "--lr_gamma", "0.75",
                 // "--lr_gamma", "0.75",
                 "--full_aug",
                 "--num_workers", "6", 
