--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1001,7 +1001,7 @@
                 // "--max_samples", "200",
                 "-e",   "100",
                 "-b", "16",
-                "-lr", "1e-3", 
+                "-lr", "1e-4", 
                 "--model", "POMELO_module", 
                 "--head", "v3",
                 // "--feature_extractor", "vgg16",
@@ -1021,7 +1021,7 @@
                 "8",
                 // "--dilation", "2",
                 "-rse",
-                "-treg", "rwa",
+                "-treg", "rwa", "uga",
                 //"-treg", "pricp2",
                 "-tregtrain", "uga",
                 "--weak_validation",
