--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -999,6 +999,7 @@
                 "-o",
                 "-s",
                 // "--max_samples", "200",
+                "--max_weak_samples", "10",
                 "-e",   "100",
                 "-b", "16",
                 "-lr", "1e-4", 
