--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -999,7 +999,7 @@
                 "-o",
                 "-s",
                 // "--max_samples", "200",
-                "--max_weak_samples", "10",
+                "--val_every_i_steps", "100",
                 "-e",   "100",
                 "-b", "16",
                 "-lr", "1e-4", 
@@ -1012,6 +1012,7 @@
                 // "-la", "1.0", "1.0",
                 "-la", "1.0",
                 "--scale_regularization", "0.0",
+                "--scale_regularizationL2", "0.1",
                 // "--lam_raw", "0.1",
                 "-dw","1", 
                 "-S2",
