empty scale regularization

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -942,6 +942,8 @@
                 // "-la", "1.0", "1.0",
                 "-la", "1.0",
                 "--scale_regularization", "0.0",
+                "--scale_regularizationL2", "0.0",
+                "-esr2", "0.1",
                 // "--lam_raw", "0.1",
                 "-dw","1", 
                 "-S2",
@@ -1012,7 +1014,7 @@
                 // "-la", "1.0", "1.0",
                 "-la", "1.0",
                 "--scale_regularization", "0.0",
-                "--scale_regularizationL2", "0.1",
+                // "--scale_regularizationL2", "0.1",
                 // "--lam_raw", "0.1",
                 "-dw","1", 
                 "-S2",
@@ -1148,6 +1150,7 @@
                 // "-l", "log_l1_loss", "L1reg", 
                 "-l", "log_l1_loss",
                 "--scale_regularization", "0.0",
+                // "--scale_regularizationL2", "1.0",
                 // "-la", "1.0", "0.01",
                 "-la", "1.0",
                 "-dw","1",
