--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -941,9 +941,7 @@
                 "-l", "log_l1_loss",
                 // "-la", "1.0", "1.0",
                 "-la", "1.0",
-                "--scale_regularization", "0.0",
-                "--scale_regularizationL2", "0.0",
-                "-esr2", "0.1",
+                "-esr2", "0.001",
                 // "--lam_raw", "0.1",
                 "-dw","1", 
                 "-S2",
@@ -1085,8 +1083,9 @@
                 "-la", "1.0",
                 // "-la", "1.0",
                 // "--lam_raw", "0.1",
-                "--scale_regularization", "0.01",
-                "-dw","4",
+                // "--scale_regularization", "0.01",
+                "-esr2", "0.01",
+                "-dw","2",
                 "-S2",
                 "-NIR",
                 "-S1",
@@ -1274,14 +1273,16 @@
                 "-o",
                 "-s",
                 // "--max_samples", "200",
-                "-e",   "200",
+                "-e",   "100",
                 "-b", "16",
-                "-lr", "1e-4", 
+                "-lr", "1e-3", 
                 "--model", "POMELO_module",  
+                "--head", "v3",
                 // "-l", "log_l1_loss", "L1reg", 
                 "-l", "log_l1_loss",
                 // "-la", "1.0", "0.01",
                 "-la", "1.0",
+                "-esr2", "0.01",
                 "-dw","1",
                 "-S2",
                 "-NIR",
@@ -1314,22 +1315,22 @@
                 // "--test_every_i_steps", "50",
                 // "--val_every_n_epochs", "100",
                 // "--weak_batch_size", "4",
-                "--weak_batch_size", "16",
+                "--weak_batch_size", "1",
                 "--occupancymodel",
                 // "--buildinginput",
                 // "--segmentationinput",
-                // "--useposembedding",
+                "--useposembedding",
                 "--weightdecay_pos", "0.0",
                 // "--val_every_i_steps", "5000",
                 "--sentinelbuildings",
-                "-r77",
+                // "-r77",
                 "--pretrained",
                 // "--gradientaccumulation",
-                "--train_level", "fine",
-                "--weak_validation",
+                "--train_level", "fineTRACTCE",
+                // "--weak_validation",
                 "--useposembedding",
-                "--val_every_i_steps", "1200",
-                "--test_every_i_steps", "6000",
+                // "--val_every_i_steps", "1200",
+                // "--test_every_i_steps", "100",
                 "--max_weak_pix", "1000000"
             ]
         },
