--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -51,10 +51,10 @@
             "program": "utils/01_download_gee_country.py",
             "console": "integratedTerminal",
             "args": [
-                "47.21619954958101",
                 "8.342543532767808",
-                "47.52405300662494",
+                "47.21619954958101",
                 "8.700972487845933",
+                "47.52405300662494",
                 "checp2test2",
             ]
         },
@@ -65,10 +65,10 @@
             "program": "utils/01_download_gee_country.py",
             "console": "integratedTerminal",
             "args": [
-                "47.696352",
-                "5.955490",
-                "46.914333",
-                "10.492294",
+                "5.855713",
+                "45.759859",
+                "10.656738",
+                "47.864774",
                 "che"
             ]
         },
@@ -436,6 +436,16 @@
             ]
         },
         {
+            "name": "07_create_buildings.py, CHE",
+            "type": "python",
+            "request": "launch",
+            "module": "utils.07_create_buildings",
+            "console": "integratedTerminal",
+            "args": [
+                "--region", "che"
+            ]
+        },
+        {
             "name": "08_preprocess_uga_shapefile.py, UGA",
             "type": "python",
             "request": "launch",
@@ -447,6 +457,13 @@
             "type": "python",
             "request": "launch",
             "program": "utils/09_preprocess_tza_shapefile.py",
+            "console": "integratedTerminal"
+        },
+        {
+            "name": "10_preprocess_che_shapefile.py, CHE",
+            "type": "python",
+            "request": "launch",
+            "program": "utils/10_preprocess_che_shapefile.py",
             "console": "integratedTerminal"
         },
         {
@@ -1000,6 +1017,75 @@
             ]
         },
         {
+            "name": "train, Stage 1, down2, rwa",
+            "type": "python",
+            "request": "launch",
+            "program": "run_train.py",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "args": [
+                "-o",
+                "-s",
+                // "--max_samples", "200",
+                "-e",   "100",
+                "-b", "16",
+                "-lr", "1e-3", 
+                "--model", "POMELO_module", 
+                "--head", "v3",
+                // "--feature_extractor", "vgg16",
+                // "--feature_extractor", "DDA", 
+                // "-l", "log_l1_loss", "L1reg", 
+                "-l", "log_l1_loss",
+                // "-la", "1.0", "1.0",
+                "-la", "1.0",
+                "-esr2", "0.01",
+                // "--lam_raw", "0.1",
+                "-dw","2", 
+                "-S2",
+                "-NIR",
+                "-S1",
+                "-f",
+                // "16",
+                "8",
+                // "--dilation", "2",
+                "-rse",
+                "-treg", "rwa",
+                //"-treg", "pricp2",
+                "-tregtrain", "rwa",
+                "-exZH",
+                "-val", "1",
+                "--lr_step", "5",
+                // "--lr_gamma", "0.825",
+                "--lr_gamma", "0.75",
+                "--full_aug",
+                // "--ascAug",
+                "--num_workers", "6", 
+                "--seed", "1612",
+                "-gc", "0.01",
+                // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1577_622/last_model.pth",
+                "--supmode", "weaksup",
+                "--lam_weak", "100",
+                // "--supmode", "unsup",
+                "--nomain",
+                // "--weak_merge_aug",
+                // "--max_weak_samples", "2",
+                "--val_every_n_epochs", "1",
+                // "--test_every_i_steps", "50",
+                // "--val_every_n_epochs", "100",
+                // "--weak_batch_size", "4",
+                "--weak_batch_size", "1",
+                "--occupancymodel",
+                "--buildinginput",
+                // "--segmentationinput",
+                "--useposembedding",
+                "--weightdecay_pos", "0.0",
+                "--sentinelbuildings",
+                // "-r77",
+                "--pretrained",
+                "--gradientaccumulation",
+            ]
+        },
+        {
             "name": "train, Stage 1, uga->rwa",
             "type": "python",
             "request": "launch",
@@ -1345,6 +1431,80 @@
                 "--max_weak_pix", "1000000"
             ]
         },
+        {
+            "name": "train, Stage 1, che",
+            "type": "python",
+            "request": "launch",
+            "program": "run_train.py",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "args": [
+                "-o",
+                "-s",
+                // "--max_samples", "200",
+                "-e",   "100",
+                "-b", "16",
+                "-lr", "1e-3", 
+                "--model", "POMELO_module",  
+                "--head", "v3",
+                // "-l", "log_l1_loss", "L1reg", 
+                "-l", "log_l1_loss",
+                // "-la", "1.0", "0.01",
+                "-la", "1.0",
+                "-esr2", "0.01",
+                "-dw","1",
+                "-S2",
+                "-NIR",
+                "-S1",
+                "-f",
+                // "16",
+                "8",
+                // "--dilation", "2",
+                "-rse",
+                "-treg", "che",
+                //"-treg", "pricp2",
+                "-tregtrain", "che",
+                "-exZH",
+                "-val", "1",
+                "--lr_step", "5",
+                // "--lr_gamma", "0.5",
+                "--lr_gamma", "0.75",
+                "--full_aug",
+                "--num_workers", "6", 
+                "--seed", "1612",
+                "-gc", "0.01",
+                // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1110_933/last_model.pth",
+                "--supmode", "weaksup",
+                "--lam_weak", "100",
+                // "--supmode", "unsup",
+                "--nomain",
+                // "--weak_merge_aug",
+                // "--max_weak_samples", "2",
+                "--val_every_n_epochs", "1",
+                // "--test_every_i_steps", "50",
+                // "--val_every_n_epochs", "100",
+                // "--weak_batch_size", "4",
+                "--weak_batch_size", "1",
+                "--occupancymodel",
+                // "--buildinginput",
+                // "--segmentationinput",
+                "--useposembedding",
+                "--weightdecay_pos", "0.0",
+                // "--val_every_i_steps", "5000",
+                "--sentinelbuildings",
+                // "-r77",
+                "--pretrained",
+                // "--gradientaccumulation",
+                "--train_level", "coarse4",
+                // "--weak_validation",
+                "--useposembedding",
+                // "--val_every_i_steps", "1200",
+                // "--test_every_i_steps", "100",
+                "--max_weak_pix", "1000000"
+            ]
+        },
+
+
         {
             "name": "train, boostUNet_4_1, weak_train, PRI -> rwa",
             "type": "python",
