resume extractor feature

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1381,7 +1381,7 @@
                 // "-la", "1.0", "0.01",
                 "-la", "1.0",
                 "-esr2", "0.01",
-                "-dw","1",
+                "-dw","2",
                 "-S2",
                 "-NIR",
                 "-S1",
@@ -1403,6 +1403,81 @@
                 "--seed", "1612",
                 "-gc", "0.01",
                 // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1110_933/last_model.pth",
+                "--supmode", "weaksup",
+                "--lam_weak", "100",
+                // "--supmode", "unsup",
+                "--nomain",
+                // "--weak_merge_aug",
+                // "--max_weak_samples", "2",
+                "--val_every_n_epochs", "1",
+                // "--test_every_i_steps", "50",
+                // "--val_every_n_epochs", "100",
+                // "--weak_batch_size", "4",
+                "--weak_batch_size", "1",
+                "--occupancymodel",
+                // "--buildinginput",
+                // "--segmentationinput",
+                "--useposembedding",
+                "--weightdecay_pos", "0.0",
+                // "--val_every_i_steps", "5000",
+                "--sentinelbuildings",
+                "--buildinginput",
+                // "-r77",
+                "--pretrained",
+                // "--gradientaccumulation",
+                "--train_level", "fineTRACTCE",
+                // "--weak_validation",
+                "--useposembedding",
+                // "--val_every_i_steps", "1200",
+                // "--test_every_i_steps", "100",
+                "--max_weak_pix", "1000000"
+            ]
+        },
+        {
+            "name": "train, Stage 1, pri finetune",
+            "type": "python",
+            "request": "launch",
+            "program": "run_train.py",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "args": [
+                "-o",
+                "-s",
+                // "--max_samples", "200",
+                "-e",   "200",
+                "-b", "16",
+                "-lr", "1e-3", 
+                "--model", "POMELO_module",  
+                "--head", "v3",
+                "--grouped",
+                // "-l", "log_l1_loss", "L1reg", 
+                "-l", "log_l1_loss",
+                // "-la", "1.0", "0.01",
+                "-la", "1.0",
+                "-esr2", "0.01",
+                "-dw","1",
+                "-S2",
+                "-NIR",
+                "-S1",
+                "-f",
+                // "16",
+                "8",
+                // "--dilation", "2",
+                "-rse",
+                "-treg", "pricp2",
+                //"-treg", "pricp2",
+                "-tregtrain", "pricp2",
+                "-exZH",
+                "-val", "1",
+                "--lr_step", "5",
+                // "--lr_gamma", "0.5",
+                "--lr_gamma", "0.75",
+                "--full_aug",
+                "--num_workers", "6", 
+                "--seed", "1612",
+                "-gc", "0.01",
+                "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1754_100/last_model.pth",
+                "--resume_extractor", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1754_100/last_model.pth",
                 "--supmode", "weaksup",
                 "--lam_weak", "100",
                 // "--supmode", "unsup",
