--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1372,7 +1372,7 @@
                 // "--max_samples", "200",
                 "-e",   "100",
                 "-b", "16",
-                "-lr", "1e-3", 
+                "-lr", "1e-4", 
                 "--model", "POMELO_module",  
                 "--head", "v3",
                 "--grouped",
@@ -1402,7 +1402,7 @@
                 "--num_workers", "6", 
                 "--seed", "1612",
                 "-gc", "0.01",
-                // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1110_933/last_model.pth",
+                "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1772_902/last_model.pth",
                 "--supmode", "weaksup",
                 "--lam_weak", "100",
                 // "--supmode", "unsup",
