--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -971,7 +971,7 @@
                 // "--max_samples", "200",
                 "-e",   "100",
                 "-b", "16",
-                "-lr", "1e-3", 
+                "-lr", "1e-4", 
                 "--model", "POMELO_module", 
                 "--head", "v3",
                 // "--feature_extractor", "vgg16",
@@ -982,7 +982,7 @@
                 "-la", "1.0",
                 "-esr2", "0.001",
                 // "--lam_raw", "0.1",
-                "-dw","1", 
+                "-dw","2", 
                 "-S2",
                 "-NIR",
                 "-S1",
@@ -1022,6 +1022,7 @@
                 "--useposembedding",
                 "--weightdecay_pos", "0.0",
                 "--sentinelbuildings",
+                "--train_level", "coarse",
                 // "-r77",
                 "--pretrained",
                 "--gradientaccumulation",
@@ -1402,7 +1403,7 @@
                 "--num_workers", "6", 
                 "--seed", "1612",
                 "-gc", "0.01",
-                "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1773_355/last_model.pth",
+                "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1775_557/last_model.pth",
                 "--supmode", "weaksup",
                 "--lam_weak", "100",
                 // "--supmode", "unsup",
